--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p><img src="imagenes/mario.jpg" width="100%"></a></p>
             <p>Los blog son la mejor forma de informacion y tus ideas. Muchos mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
